[package]
name = "unsigned-varint"
version = "0.2.3"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
description = "unsigned varint encoding"
repository = "https://github.com/paritytech/unsigned-varint"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
codec = ["bytes", "tokio-codec"]
futures-codec = ["bytes", "futures_codec"]

[dependencies]
bytes = { version = "0.5.3", optional = true }
tokio-codec = { version = "0.2.0-alpha.5", optional = true }
futures_codec = { version = "0.3.0", optional = true }

[dev-dependencies]
bytes = "0.5.3"
criterion = "0.3.0"
hex = "0.4.0"
quickcheck = "0.9.0"
tokio-codec = "0.1.1"

[[bench]]
name = "benchmark"
harness = false
